syntax = "proto3";
package k1s0.system.auth.v1;

import "k1s0/system/common/v1/types.proto";

// AuthService は JWT トークン検証、ユーザー情報管理、パーミッション確認を提供する。
service AuthService {
  // JWT トークン検証
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // トークンイントロスペクション（RFC 7662）
  rpc IntrospectToken(IntrospectTokenRequest) returns (IntrospectTokenResponse);

  // ユーザー情報取得
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // ユーザー一覧取得
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  // ユーザーロール取得
  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse);

  // パーミッション確認
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);
}

// AuditService は監査ログの記録・検索を提供する。
service AuditService {
  // 監査ログ記録
  rpc RecordAuditLog(RecordAuditLogRequest) returns (RecordAuditLogResponse);

  // 監査ログ検索
  rpc SearchAuditLogs(SearchAuditLogsRequest) returns (SearchAuditLogsResponse);
}

// --- Token Validation ---

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  TokenClaims claims = 2;
  string error_message = 3; // valid == false の場合のエラー理由
}

message TokenClaims {
  string sub = 1;
  string iss = 2;
  string aud = 3;
  int64 exp = 4;
  int64 iat = 5;
  string jti = 6;
  string preferred_username = 7;
  string email = 8;
  RealmAccess realm_access = 9;
  map<string, ClientRoles> resource_access = 10;
  repeated string tier_access = 11;
}

message RealmAccess {
  repeated string roles = 1;
}

message ClientRoles {
  repeated string roles = 1;
}

// --- Token Introspection ---

message IntrospectTokenRequest {
  string token = 1;
  string token_type_hint = 2; // "access_token" or "refresh_token"
}

message IntrospectTokenResponse {
  bool active = 1;
  string sub = 2;
  string client_id = 3;
  string username = 4;
  string token_type = 5;
  int64 exp = 6;
  int64 iat = 7;
  string scope = 8;
  RealmAccess realm_access = 9;
}

// --- User ---

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {
  k1s0.system.common.v1.Pagination pagination = 1;
  string search = 2;
  optional bool enabled = 3;
}

message ListUsersResponse {
  repeated User users = 1;
  k1s0.system.common.v1.PaginationResult pagination = 2;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  bool enabled = 6;
  bool email_verified = 7;
  k1s0.system.common.v1.Timestamp created_at = 8;
  map<string, StringList> attributes = 9;
}

message StringList {
  repeated string values = 1;
}

// --- Roles ---

message GetUserRolesRequest {
  string user_id = 1;
}

message GetUserRolesResponse {
  string user_id = 1;
  repeated Role realm_roles = 2;
  map<string, RoleList> client_roles = 3;
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
}

message RoleList {
  repeated Role roles = 1;
}

// --- Permission Check ---

message CheckPermissionRequest {
  string user_id = 1;
  string permission = 2;  // read, write, delete, admin
  string resource = 3;    // users, auth_config, audit_logs, etc.
  repeated string roles = 4; // JWT Claims から取得したロール一覧
}

message CheckPermissionResponse {
  bool allowed = 1;
  string reason = 2; // 拒否理由（allowed == false の場合）
}

// --- Audit Log ---

message RecordAuditLogRequest {
  string event_type = 1;    // LOGIN_SUCCESS, LOGIN_FAILURE, TOKEN_VALIDATE, PERMISSION_DENIED 等
  string user_id = 2;
  string ip_address = 3;
  string user_agent = 4;
  string resource = 5;
  string action = 6;         // HTTP メソッドまたは gRPC メソッド名
  string result = 7;         // SUCCESS / FAILURE
  map<string, string> metadata = 8;
}

message RecordAuditLogResponse {
  string id = 1;
  k1s0.system.common.v1.Timestamp recorded_at = 2;
}

message SearchAuditLogsRequest {
  k1s0.system.common.v1.Pagination pagination = 1;
  string user_id = 2;
  string event_type = 3;
  k1s0.system.common.v1.Timestamp from = 4;
  k1s0.system.common.v1.Timestamp to = 5;
  string result = 6; // SUCCESS / FAILURE
}

message SearchAuditLogsResponse {
  repeated AuditLog logs = 1;
  k1s0.system.common.v1.PaginationResult pagination = 2;
}

message AuditLog {
  string id = 1;
  string event_type = 2;
  string user_id = 3;
  string ip_address = 4;
  string user_agent = 5;
  string resource = 6;
  string action = 7;
  string result = 8;
  map<string, string> metadata = 9;
  k1s0.system.common.v1.Timestamp recorded_at = 10;
}
